// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`within projectsSelectors the projectsForInclusionsTableSelector matches its snapshot based on state.allEntities.areExistsInTargetShown when state.allEntities.areExistsInTargetShown = false 1`] = `
Array [
  Object {
    "clientId": null,
    "color": "#04bb9b",
    "entryCount": 3,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": false,
    "id": "2004",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project D",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#205500",
    "entryCount": 4,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": false,
    "id": "2005",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project E",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#a01aa5",
    "entryCount": 4,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": false,
    "id": "2006",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project F",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
]
`;

exports[`within projectsSelectors the projectsForInclusionsTableSelector matches its snapshot based on state.allEntities.areExistsInTargetShown when state.allEntities.areExistsInTargetShown = true 1`] = `
Array [
  Object {
    "clientId": "3001",
    "color": "#ea468d",
    "entryCount": 3,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": true,
    "id": "2001",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": true,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": "clock-project-01",
    "memberOf": "projects",
    "name": "Test Project A",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#3750b5",
    "entryCount": 3,
    "estimate": Object {
      "estimate": 40,
      "type": "MANUAL",
    },
    "existsInTarget": true,
    "id": "2002",
    "isActive": false,
    "isActiveInSource": false,
    "isActiveInTarget": true,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": "clock-project-02",
    "memberOf": "projects",
    "name": "Test Project B",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#c56bff",
    "entryCount": 3,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": true,
    "id": "2003",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": "clock-project-03",
    "memberOf": "projects",
    "name": "Test Project C",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#04bb9b",
    "entryCount": 3,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": false,
    "id": "2004",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project D",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#205500",
    "entryCount": 4,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": false,
    "id": "2005",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project E",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#a01aa5",
    "entryCount": 4,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "existsInTarget": false,
    "id": "2006",
    "isActive": true,
    "isActiveInSource": true,
    "isActiveInTarget": false,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project F",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
]
`;

exports[`within projectsSelectors the selectors match their snapshots for the includedSourceProjectIdsSelector 1`] = `
Array [
  "2004",
  "2005",
]
`;

exports[`within projectsSelectors the selectors match their snapshots for the includedSourceProjectsSelector 1`] = `
Array [
  Object {
    "clientId": null,
    "color": "#04bb9b",
    "entryCount": 3,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2004",
    "isActive": true,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project D",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#205500",
    "entryCount": 4,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2005",
    "isActive": true,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project E",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
]
`;

exports[`within projectsSelectors the selectors match their snapshots for the projectIdToLinkedIdSelector 1`] = `
Object {
  "2001": "clock-project-01",
  "2002": "clock-project-02",
  "2003": "clock-project-03",
  "clock-project-01": "2001",
  "clock-project-02": "2002",
  "clock-project-03": "2003",
}
`;

exports[`within projectsSelectors the selectors match their snapshots for the projectsByWorkspaceIdByToolNameSelector 1`] = `
Object {
  "clockify": Object {
    "clock-workspace-01": Array [
      Object {
        "clientId": "clock-client-01",
        "color": "#ea468d",
        "entryCount": 0,
        "estimate": Object {
          "estimate": "PT0S",
          "type": "AUTO",
        },
        "id": "clock-project-01",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "2001",
        "memberOf": "projects",
        "name": "Test Project A",
        "userIds": Array [
          "clock-user-01",
        ],
        "workspaceId": "clock-workspace-01",
      },
      Object {
        "clientId": "clock-client-02",
        "color": "#c56bff",
        "entryCount": 0,
        "estimate": Object {
          "estimate": "PT0S",
          "type": "AUTO",
        },
        "id": "clock-project-02",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "2002",
        "memberOf": "projects",
        "name": "Test Project B",
        "userIds": Array [
          "clock-user-01",
        ],
        "workspaceId": "clock-workspace-01",
      },
      Object {
        "clientId": "",
        "color": "#04bb9b",
        "entryCount": 0,
        "estimate": Object {
          "estimate": "PT0S",
          "type": "AUTO",
        },
        "id": "clock-project-03",
        "isActive": false,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "2003",
        "memberOf": "projects",
        "name": "Test Project C",
        "userIds": Array [
          "clock-user-01",
        ],
        "workspaceId": "clock-workspace-01",
      },
    ],
  },
  "toggl": Object {
    "1001": Array [
      Object {
        "clientId": "3001",
        "color": "#ea468d",
        "entryCount": 3,
        "estimate": Object {
          "estimate": 0,
          "type": "MANUAL",
        },
        "id": "2001",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "clock-project-01",
        "memberOf": "projects",
        "name": "Test Project A",
        "userIds": Array [
          "6001",
        ],
        "workspaceId": "1001",
      },
      Object {
        "clientId": null,
        "color": "#3750b5",
        "entryCount": 3,
        "estimate": Object {
          "estimate": 40,
          "type": "MANUAL",
        },
        "id": "2002",
        "isActive": false,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "clock-project-02",
        "memberOf": "projects",
        "name": "Test Project B",
        "userIds": Array [
          "6001",
        ],
        "workspaceId": "1001",
      },
      Object {
        "clientId": null,
        "color": "#c56bff",
        "entryCount": 3,
        "estimate": Object {
          "estimate": 0,
          "type": "MANUAL",
        },
        "id": "2003",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": "clock-project-03",
        "memberOf": "projects",
        "name": "Test Project C",
        "userIds": Array [
          "6001",
        ],
        "workspaceId": "1001",
      },
      Object {
        "clientId": null,
        "color": "#04bb9b",
        "entryCount": 3,
        "estimate": Object {
          "estimate": 0,
          "type": "MANUAL",
        },
        "id": "2004",
        "isActive": true,
        "isBillable": false,
        "isIncluded": true,
        "isPublic": false,
        "linkedId": null,
        "memberOf": "projects",
        "name": "Test Project D",
        "userIds": Array [
          "6001",
        ],
        "workspaceId": "1001",
      },
      Object {
        "clientId": null,
        "color": "#205500",
        "entryCount": 4,
        "estimate": Object {
          "estimate": 0,
          "type": "MANUAL",
        },
        "id": "2005",
        "isActive": true,
        "isBillable": false,
        "isIncluded": true,
        "isPublic": false,
        "linkedId": null,
        "memberOf": "projects",
        "name": "Test Project E",
        "userIds": Array [
          "6001",
        ],
        "workspaceId": "1001",
      },
      Object {
        "clientId": null,
        "color": "#a01aa5",
        "entryCount": 4,
        "estimate": Object {
          "estimate": 0,
          "type": "MANUAL",
        },
        "id": "2006",
        "isActive": true,
        "isBillable": false,
        "isIncluded": false,
        "isPublic": false,
        "linkedId": null,
        "memberOf": "projects",
        "name": "Test Project F",
        "userIds": Array [
          "6001",
        ],
        "workspaceId": "1001",
      },
    ],
  },
}
`;

exports[`within projectsSelectors the selectors match their snapshots for the projectsTotalCountsByTypeSelector 1`] = `
Object {
  "entryCount": 20,
  "existsInTarget": 3,
  "isActiveInSource": 5,
  "isActiveInTarget": 2,
  "isIncluded": 2,
}
`;

exports[`within projectsSelectors the selectors match their snapshots for the sourceProjectsForTransferSelector 1`] = `
Array [
  Object {
    "clientId": null,
    "color": "#04bb9b",
    "entryCount": 3,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2004",
    "isActive": true,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project D",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#205500",
    "entryCount": 4,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2005",
    "isActive": true,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project E",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
]
`;

exports[`within projectsSelectors the selectors match their snapshots for the sourceProjectsInActiveWorkspaceSelector 1`] = `
Array [
  Object {
    "clientId": "3001",
    "color": "#ea468d",
    "entryCount": 3,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2001",
    "isActive": true,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": "clock-project-01",
    "memberOf": "projects",
    "name": "Test Project A",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#3750b5",
    "entryCount": 3,
    "estimate": Object {
      "estimate": 40,
      "type": "MANUAL",
    },
    "id": "2002",
    "isActive": false,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": "clock-project-02",
    "memberOf": "projects",
    "name": "Test Project B",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#c56bff",
    "entryCount": 3,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2003",
    "isActive": true,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": "clock-project-03",
    "memberOf": "projects",
    "name": "Test Project C",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#04bb9b",
    "entryCount": 3,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2004",
    "isActive": true,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project D",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#205500",
    "entryCount": 4,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2005",
    "isActive": true,
    "isBillable": false,
    "isIncluded": true,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project E",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
  Object {
    "clientId": null,
    "color": "#a01aa5",
    "entryCount": 4,
    "estimate": Object {
      "estimate": 0,
      "type": "MANUAL",
    },
    "id": "2006",
    "isActive": true,
    "isBillable": false,
    "isIncluded": false,
    "isPublic": false,
    "linkedId": null,
    "memberOf": "projects",
    "name": "Test Project F",
    "userIds": Array [
      "6001",
    ],
    "workspaceId": "1001",
  },
]
`;
